- Fixed alignment issue on coding examples page.

--- a/SCSS/pages/_coding-examples.scss
+++ b/SCSS/pages/_coding-examples.scss
@@ -9,18 +9,26 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+  background-size: cover;
     background-image: url(/Images/abstract-placeholder.jpeg);
 }
 
 .heading_wrapper {
-  padding: 5px 10px;
-  border: 2px solid #C0C0C0;
-  border-radius: 10%;
-  background-color: white;
-  opacity: 85%
+  display: flex;
+  justify-content: center;
+  // padding: 5px 10px;
+  // border: 2px solid #C0C0C0;
+  // border-radius: 10%;
+  // background-color: white;
+  // opacity: 85%
 }
 
 .soon {
+  padding: 40px;
+  border: 2px solid #C0C0C0;
+  border-radius: 10%;
+  background-color: white;
+  opacity: 85%;
   font-family: Pacifico;
   font-size: 40px;
   letter-spacing: 2px;
