--- a/SCSS/styles.css
+++ b/SCSS/styles.css
@@ -1495,18 +1495,21 @@ textarea {
   justify-content: center;
   align-items: center;
   height: 100vh;
+  background-size: cover;
   background-image: url(/Images/abstract-placeholder.jpeg);
 }
 
 .heading_wrapper {
-  padding: 5px 10px;
+  display: flex;
+  justify-content: center;
+}
+
+.soon {
+  padding: 40px;
   border: 2px solid #C0C0C0;
   border-radius: 10%;
   background-color: white;
   opacity: 85%;
-}
-
-.soon {
   font-family: Pacifico;
   font-size: 40px;
   letter-spacing: 2px;
